--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dack.alex.swimright">
 
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".HomeActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".PostureActivity" />
         <activity android:name=".HelpActivity" />
@@ -25,7 +30,11 @@
         <activity android:name=".statsActivity" />
         <activity android:name=".daActivity" />
         <activity android:name=".distActivity" />
-        <activity android:name=".senddataActivity"></activity>
-    </application>
+        <activity android:name=".senddataActivity"/>
+        <activity android:name=".DisplayMessageActivity"/>
+        <activity android:name=".BluetoothActivity"/>
+        <activity android:name=".DeviceListActivity"/>
+        <activity android:name=".RegisterActivity" />
 
+    </application>
 </manifest>
